Formatted HTML and CSS code to be cleaner

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization" alt="Search Engine Optimization Link">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization" alt="Search Engine Optimization Link">Search Engine
+                        Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management" alt="Online Reputation Management Link">Online Reputation Management</a>
+                    <a href="#online-reputation-management" alt="Online Reputation Management Link">Online Reputation
+                        Management</a>
                 </li>
                 <li>
                     <a href="#social-media-marketing" alt="Social Media Marketing Link">Social Media Marketing</a>
@@ -27,7 +29,9 @@
     <section class="hero"></section>
     <section class="content">
         <article class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="View from above of a desk full of office working supplies. Including a laptop, coffe cup, a pencil holder full of pencils, and a magnifying glass on the laptop." class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg"
+                alt="View from above of a desk full of office working supplies. Including a laptop, coffe cup, a pencil holder full of pencils, and a magnifying glass on the laptop."
+                class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -35,7 +39,9 @@
                 your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" alt="Worker sitting in front of a laptop holding a phone. The laptop screen is displaying a visual of a reputation graph with the levels increasing in a positive manner." class="online-reputation-management">
+        <article id="online-reputation-management"
+            alt="Worker sitting in front of a laptop holding a phone. The laptop screen is displaying a visual of a reputation graph with the levels increasing in a positive manner."
+            class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -44,7 +50,9 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" alt="View from above of a team of people brainstorming at a large wooden desk. Each member is a team is holding a laptop or iPad. Spread around the table are many comic style word bubbles with phrases and icons. Phrases include words such as tweet, media, like, and share. Icons bubbles include pcitures of robots, app logo's, music symbols, heart emoji, and a lock. " class="social-media-marketing">
+        <article id="social-media-marketing"
+            alt="View from above of a team of people brainstorming at a large wooden desk. Each member is a team is holding a laptop or iPad. Spread around the table are many comic style word bubbles with phrases and icons. Phrases include words such as tweet, media, like, and share. Icons bubbles include pcitures of robots, app logo's, music symbols, heart emoji, and a lock. "
+            class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -57,7 +65,8 @@
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt=" Clip-art style image of a half gear funneling into a money symbol."/>
+            <img src="./assets/images/lead-generation.png"
+                alt=" Clip-art style image of a half gear funneling into a money symbol." />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -65,7 +74,8 @@
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Clip-art style image of a lightbulb shaped head on top of a business dressed torso." />
+            <img src="./assets/images/brand-awareness.png"
+                alt="Clip-art style image of a lightbulb shaped head on top of a business dressed torso." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -73,7 +83,8 @@
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Clip-art style of a gear with multiple currency coins in front of it in a cluster. Coins have a money symbol in the center."/>
+            <img src="./assets/images/cost-management.png"
+                alt="Clip-art style of a gear with multiple currency coins in front of it in a cluster. Coins have a money symbol in the center." />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
